--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -7,7 +7,11 @@ outer__div{
   font-size:24px;
   word-wrap: break-word;
   font-family: 'Roboto', sans-serif;
-
+@media only screen and (max-width: 600px) {
+  outer__div {
+    font-size:30px;
+  }
+}
 }
 .outer__div > div{
   padding: 3vh;
