--- a/src/components/GitStatus.module.css
+++ b/src/components/GitStatus.module.css
@@ -2,7 +2,9 @@
    
 .outer__div{
     width:80vw;
-    margin:100px auto;
+    margin-left:auto ;
+    margin-right:auto;
+    margin-bottom:0px !important;
 }
 .outer__div > img{
     width: 100%;
