--- a/src/components/Project.module.css
+++ b/src/components/Project.module.css
@@ -14,7 +14,8 @@
     text-align: center;
     padding: 2%;
     margin: 1vh;
-     box-shadow: 0 0 9px 2px grey; 
+     border:1px solid black;
+     /* box-shadow: 0 0 9px 2px grey;  */
     border-radius: 10px;
    
     
@@ -28,7 +29,8 @@
     margin: 1vh;
     border: 1px solid black;
     cursor: pointer;
-     box-shadow: 0px 0px 3px 1px rgb(51, 49, 49); 
+     border:1px solid black;
+     /* box-shadow: 0px 0px 3px 1px rgb(51, 49, 49);  */
     font-size: 15px;
     outline:none
 }
@@ -89,7 +91,8 @@ span{
         margin: 1vh;
         border: 1px solid black;
         cursor: pointer;
-        box-shadow: 0px 0px 3px 1px rgb(51, 49, 49); 
+        border:1px solid black;
+        /* box-shadow: 0px 0px 3px 1px rgb(51, 49, 49);  */
         font-size: 3vw;
         outline:none
     }
