--- a/src/components/BasicInfo.module.css
+++ b/src/components/BasicInfo.module.css
@@ -63,3 +63,13 @@
     color:rgb(94, 87, 87);
     margin-bottom:5%;
 }
+.ricons
+{
+width:3.2vw;
+height:3vh;
+ @media only screen and (max-width:600px) {
+   width:3.2vw;
+   height:3vh; 
+
+} 
+}
