--- a/src/components/BasicInfo.module.css
+++ b/src/components/BasicInfo.module.css
@@ -67,7 +67,7 @@
 {
 width:2.5vw;
 height:3vh;
- @media only screen and (max-width:600px) {
+ @media only screen and (min-width:600px) {
    width:3.2vw;
    height:3vh; 
 
