--- a/src/components/BasicInfo.module.css
+++ b/src/components/BasicInfo.module.css
@@ -25,15 +25,17 @@
 }
 .linkedin__class
 {
-    width: 8vw;
+    width: 16vw;
     margin: auto;
     
     display: flex;
     /* border:1px solid black; */
      justify-content: space-evenly; 
-     flex-wrap: wrap; 
+     flex-wrap: nowrap; 
      @media screen only screen and (max-width:600px){
+         flex-direction: column; 
          justify-content: space-between; 
+         width:25vw; 
      } 
 
 
