--- a/src/components/TechStack.module.css
+++ b/src/components/TechStack.module.css
@@ -54,8 +54,13 @@
     {
         width:10vw;
         height:10vh;
-         @media screen and only (max-width:600px){
+      
+    } 
+       @media screen and  (max-width:400px){
+           .sicon
+    {
+        
             width:20vw;
             height:20vh;
         } 
-    } 
+    }
