--- a/src/components/BasicInfo.module.css
+++ b/src/components/BasicInfo.module.css
@@ -105,10 +105,10 @@ height:20px;
     width:4vw;
     height:4.5vh;
 }
-/* @media screen and (max-width:600px){
+@media screen and (max-width:300px){
  .lgicons{
     width:8vw;
     height:8.5vh;
 }   
     
-} */
+} 
