--- a/src/components/BasicInfo.module.css
+++ b/src/components/BasicInfo.module.css
@@ -94,10 +94,10 @@ height:20px;
 @media screen and (max-width:300px){
     .contact__info
 {
-    width:65vw;
+    width:80vw;
 
     display: flex;
-    flex-direction: column;
+    flex-direction:basic;
     justify-content: center;
     align-items: center;
    
